--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-native-element-dropdown": "^2.12.2",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^5.0.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
